[project]
name = "cdo-mcp"
version = "0.1.0"
description = "Local MCP server for Cisco Defense Orchestrator API"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Jack Riebel", email = "jack.riebel@gmail.com"}
]
dependencies = [
    "requests>=2.28.0",
    "pydantic>=2.0.0",
    "python-dotenv>=0.21.0"
]

[project.urls]
"Homepage" = "https://github.com/JackRiebel/Cisco_Security_Cloud_Control_MCP"
"Repository" = "https://github.com/JackRiebel/Cisco_Security_Cloud_Control_MCP"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
